--- a/app/views/posts/_favorite_buttons.html.erb
+++ b/app/views/posts/_favorite_buttons.html.erb
@@ -1,7 +1,7 @@
 <div class='ms-auto'>
   <% if current_user.favorite?(post) %>
-    <%= render 'unfavorite', { post: post } %>
+    <%= render 'posts/unfavorite', { post: post } %>
   <% else %>
-    <%= render 'favorite', { post: post } %>
+    <%= render 'posts/favorite', { post: post } %>
   <% end %>
 </div>
